# gtd-tui

./: AGENTS.md  CLAUDE.md  Cargo.toml  SPEC.md  USAGE.md  skills-lock.json
.qwen/: settings.json
gtd-core/: Cargo.toml
gtd-core/src/: lib.rs
gtd-core/src/hotkey/: action.rs  binding.rs  mod.rs
gtd-core/src/models/: area.rs  checklist_item.rs  heading.rs  hotkey_config.rs  mod.rs  project.rs  recurrence_rule.rs  tag.rs  task.rs
gtd-core/src/services/: mod.rs
gtd-core/src/storage/: mod.rs  sqlite.rs
gtd-core/tests/: smoke.rs
gtd-tui/: Cargo.toml
gtd-tui/src/: app.rs  commands.rs  config.rs  editor.rs  keymap.rs  main.rs  state.rs
gtd-tui/src/ui/: layout.rs  mod.rs  theme.rs
gtd-tui/src/ui/views/: anytime.rs  inbox.rs  mod.rs  someday.rs  today.rs  upcoming.rs
qwen/: CONFIGURATION_GUIDE.md  PROJECT_OVERVIEW.md
