[package]
name = "gtd-tui"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow = "1"
crossterm = "0.27"
ratatui = "0.26"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
gtd-core = { path = "../gtd-core" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
